Modified structure to the current one

--- a/forms/contacts/create.html
+++ b/forms/contacts/create.html
@@ -37,7 +37,7 @@
 					<option value="F">Female</option>
 				</select>
 				<br/>
-				<input type="submit" class="btn" value="Submit" />
+				<input type="submit" class="btn btn-primary" value="Submit" />
 			</form>
 		</div>
 		<script src="http://code.jquery.com/jquery.js"></script>
